<resources>
    <string name="app_name">Mobile Mechanics</string>

    <string name="my_map_api_key">AIzaSyA8iZiGMKUIeeyzqLLvVWjL-6rJNrixzKY</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="i_am_loging_out">I am loging out</string>
    <string name="log_out">Log out</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="client_section">Client Section</string>
    <string name="client_segment">Client Segment</string>
    <string name="mechanic_segment">Mechanic Segment</string>
    <string name="mechanics_segment">Mechanics Segment</string>
    <string name="service_segment">Service Segment</string>
    <string name="clients_segment">Clients Segment</string>
    <string name="mechanics_corner">Mechanics Corner</string>
    <string name="get_started">Get Started</string>
    <string name="fuel_delivery">Fuel Delivery</string>
    <string name="tyre_change">Tyre Change</string>
    <string name="towing">Towing</string>
    <string name="lockout">Lockout</string>
    <string name="jumpstart">Jumpstart</string>
    <string name="road_assistance">ROAD ASSISTANCE</string>
    <string name="mechanics_dashboard">Mechanics Dashboard</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="specialization">Specialization</string>
    <string name="jobs">Jobs</string>
    <string name="occupants">Select Occupants</string>
    <string name="occupation">Occupation</string>
    <string name="gain_access_to_the_fastest_and_quality_mechanical_services_near_you">Gain Access to the fastest and quality mechanical services near you!</string>
    <string name="i_don_t_have_an_account_yet">I Don\'t Have An Account Yet</string>
    <string name="i_already_have_an_account">I Already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="service_segments">Service Segments</string>
    <string name="select_your_occupation">Select your occupation</string>
    <string name="ratings">Ratings</string>
    <string name="mechanical_work">Mechanical Work</string>
    <string name="wiring">Wiring</string>
    <string name="body_work">Body work</string>
    <string name="current_location">Current location</string>
    <string name="manual">Manual</string>
    <string name="road_safety_tutorials">Road safety tutorials</string>
    <string name="mechanic_ratings">Mechanic Ratings</string>
    <string name="tutorials">Tutorials</string>
    <string name="engine_components_and_functions">Engine components and functions</string>
    <string name="engine">Engine</string>
    <string name="mechanic_details">Mechanic Details</string>
    <string name="services_segment">Services Segment</string>
    <string name="client_or_mechanic">Client or Mechanic</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="i_haven_t_signed_in_yet">I haven\'t signed in yet</string>
    <string name="i_haven_t_signed_up_yet">I haven\'t signed up yet</string>
    <string name="proceed">Proceed</string>
    <string name="user_current_location">User Current Location</string>
    <string name="i_have_already_signed_up">I have already signed Up</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="sign_in_for_service">Sign-in for service</string>
    <string name="register_for_service">Register for service</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="google_map_key">AIzaSyA8iZiGMKUIeeyzqLLvVWjL-6rJNrixzKY</string>
    <string name="find">Find</string>
    <string name="garage">Garage</string>
    <string name="title_activity_kajiado">Kajiado</string>
    <string name="title_activity_isinya">Isinya</string>
    <string name="title_activity_kitengela_map">KitengelaMap</string>
    <string name="title_activity_bisil">Bisil</string>
    <string name="title_activity_kisaju">Kisaju</string>
    <string name="title_activity_namanga">Namanga</string>
    <string name="sign_in">Sign-in</string>
</resources>